# ros2_mobil_robot_ws

./: .gitignore  README.md
src/gezgin_robot/: CMakeLists.txt  package.xml
src/gezgin_robot/launch/: display.launch.py  gazebo.launch.py  test_gazebo.launch.py
src/gezgin_robot/urdf/: gezgin.urdf
src/gezgin_robot/worlds/: gezgin_dunyasi.world
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  gazebo.launch.py
src/my_robot_description/rviz/: gazebo_config.rviz
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/my_robot_description/worlds/: my_world.world
